@@ -7,6 +7,7 @@
             LANGUAGE = ObjC; 
             OUTLETS = {
                 antiAlias = id; 
+                blinkingCursor = id; 
                 copySelection = id; 
                 hideTab = id; 
                 macnavkeys = id; 
