@@ -8,6 +8,8 @@
     * Fixed more memory leaks caused by PseudoTerminal and PTYSession 
       retaining each other. Now PTYSession does not retain PseudoTerminal 
       parent.
+      
+    * Added support for blinking cursor.
 
 2003-05-28	ujwal
 
